--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,22 @@
 * {
-    background-color: #ffb4b4;
+    background-color: #acacac;
     padding: 0;
     margin: 0%;
 }
 
+p {
+    color:black;
+    font-family: fantasy;
+    font-size: 17px;
+    text-align:center;
+}
+
 .box-one {
-    background-color: aquamarine;
-    border: 10px solid #ffffff;
+    background-color: rgb(255, 220, 246);
+    border: 2px solid #ffffff;
     padding: 20px;
     width: 400px;
-    border-radius: 16px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 70px;
+    border-radius: 35px;
 }
 
 .box-two {
